# mpi

./: CMakeLists.txt  README.md
src/: MOD_mpi.f90  par_play.f90  test_driver.f90
